updated flask app routes

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,10 @@
   <h2>Avaiable Routes</h2>
   <ul>
     <a href="/api/v1.0/precipitation"><li>/api/v1.0/precipitation</li></a>
-    <li>/api/v1.0/stations</li>
-    <li>/api/v1.0/tobs</li>
-    <li>/api/v1.0/&lt;start&gt;</li>
-    <li>/api/v1.0/&lt;start&gt;/&lt;end&gt;</li>
+    <a href="/api/v1.0/stations"><li>/api/v1.0/stations</li></a>
+    <a href="/api/v1.0/tobs"><li>/api/v1.0/tobs</li></a>
+    <li>/api/v1.0/temp/&lt;start&gt;</li>
+    <li>/api/v1.0/temp/&lt;start&gt;/&lt;end&gt;</li>
   </ul>  
 </body>
 </html>
